# deep-aerial

./: .gitignore  .pre-commit-config.yaml  README.md  colab_overview.ipynb  colab_training.ipynb  drone-image-segmentation.ipynb  pyproject.toml
colab/: training_drone_seg.ipynb  training_swimming_inst.ipynb
dataset/: __init__.py  dataset_drone.py  dronedataset.py
dataset/build_dataset/: bing.xml  im.tiff.aux.xml  scrap_map.py
dataset/core/: __init__.py  instdataset.py
dataset/setup/: coco.sh  drone.sh  isaid.sh  kaggle-dataset.sh  login_kaggle.sh  setup_ir.sh  setup_swimming.sh  to_coco_format.py
model/: __init__.py  display_pred.py  display_pred_inst.py  inst_model.py  model.py  seg_model.py
model/core/: model.py
model/metrics/: __init__.py  plot_metrics.py  segmentation.py
